# fast_api_practice

services/talk_booking/: pyproject.toml
