[tool.poetry]
name = "talk-booking"
version = "0.1.0"
description = "\"A service to allow clients to book a talk/presentation\""
authors = ["Stephen Carmody <stephen.carmody@glovoapp.com>"]
readme = "README.md"
packages = [{include = "talk_booking"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
