[tool.poetry]
name = "talk-booking"
version = "0.1.0"
description = ""
authors = ["Stephen Carmody"]
readme = "README.md"
packages = [{include = "talk_booking"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
